@@ -27,6 +27,9 @@ NEWS - list of user-visible changes between releases of GNU Libtool
     utilizing clang builtins or g++ options like, -static-libstdc++, by
     using a new configuration option, --enable-cxx-stdlib.
 
+  - Ensure *-linux-mlibc host matches to mlibc userland rather than
+    matching to GNU/Linux and similar userlands.
+
 
 * Noteworthy changes in release 2.5.4 (2024-11-20) [stable]
 
